@@ -816,7 +816,13 @@ abstract class EntityValueBase implements EntityValue {
 
     abstract EntityValue cloneValue();
 
-    // =========== The abstract methods ===========
+    // =========== The CrUD and abstract methods ===========
+
+    boolean doDataFeed() {
+        // skip ArtifactHitBin, causes funny recursion
+        return this.getEntityDefinition().getFullEntityName() != "moqui.server.ArtifactHitBin"
+    }
+
     @Override
     EntityValue create() {
         long startTime = System.currentTimeMillis()
@@ -835,7 +841,7 @@ abstract class EntityValueBase implements EntityValue {
             this.set("lastUpdatedStamp", new Timestamp(lastUpdatedLong))
 
         // do this before the db change so modified flag isn't cleared
-        getEntityFacadeImpl().getEntityDataFeed().dataFeedCheckAndRegister(this, false, valueMap, null)
+        if (doDataFeed()) getEntityFacadeImpl().getEntityDataFeed().dataFeedCheckAndRegister(this, false, valueMap, null)
 
         ListOrderedSet fieldList = new ListOrderedSet()
         for (String fieldName in ed.getFieldNames(true, true, false)) if (valueMap.containsKey(fieldName)) fieldList.add(fieldName)
@@ -917,7 +923,8 @@ abstract class EntityValueBase implements EntityValue {
         // it may be that the oldValues map is full of null values because the EntityValue didn't come from the db
         if (dbValueMap) for (Object val in dbValueMap.values()) if (val != null) { dbValueMapFromDb = true; break }
 
-        List entityInfoList = getEntityFacadeImpl().getEntityDataFeed().getDataFeedEntityInfoList(ed.getFullEntityName())
+        List entityInfoList = doDataFeed() ? getEntityFacadeImpl().getEntityDataFeed().getDataFeedEntityInfoList(ed.getFullEntityName()) : []
+
         EntityValueImpl refreshedValue = null
         if (ed.needsAuditLog() || entityInfoList || ed.getEntityNode()."@optimistic-lock" == "true") {
             refreshedValue = (EntityValueImpl) this.clone()
