@@ -102,6 +102,10 @@ Bug Fixes:
 - Links (including URL parameter and hidden form) now handle Timestamp and
   BigDecimal the same as hidden form fields. This resolves issues with time
   zones for Timestamps, and with number parsing for BigDecimals.
+- Fixed issues with transition path-parameter when screen has no actions
+  where transition was not removed from the path name list and path,
+  screen, and transition parameters were not expanded for response
+  parameters
 
 ===========================================================================
 Release 1.3.2 - 20 Nov 2013
